feat(completions): update ngrok

--- a/completions/ngrok/language/en-US.json
+++ b/completions/ngrok/language/en-US.json
@@ -86,8 +86,8 @@
     "completion_info": {
       "url": "https://ngrok.com/",
       "description": [
-        "ngrok - Unified Ingress Platform  for developers\n",
-        "Connect localhost to the internet for testing applications and APIs"
+        "ngrok - Unified Ingress Platform for developers.\n",
+        "Connect localhost to the internet for testing applications and APIs."
       ]
     }
   }
