--- a/completions/ngrok/language/zh-CN.json
+++ b/completions/ngrok/language/zh-CN.json
@@ -1,5 +1,62 @@
 {
-  "root": [],
+  "root": [
+    {
+      "name": "api",
+      "tip": "使用 ngrok 代理作为 API 客户端"
+    },
+    {
+      "name": "completion",
+      "tip": "生成 bash 或 zsh 的 shell 补全代码"
+    },
+    {
+      "name": "config",
+      "tip": "更新或迁移 ngrok 的配置文件"
+    },
+    {
+      "name": "credits",
+      "tip": "打印作者和许可信息"
+    },
+    {
+      "name": "diagnose",
+      "tip": "诊断连接问题"
+    },
+    {
+      "name": "help",
+      "tip": "有关任何命令的帮助"
+    },
+    {
+      "name": "http",
+      "tip": "启动 HTTP 隧道"
+    },
+    {
+      "name": "service",
+      "tip": "在目标操作系统上运行和控制 ngrok 服务"
+    },
+    {
+      "name": "start",
+      "tip": "从配置文件中按名称启动隧道"
+    },
+    {
+      "name": "tcp",
+      "tip": "启动 TCP 隧道"
+    },
+    {
+      "name": "tls",
+      "tip": "启动 TLS 隧道"
+    },
+    {
+      "name": "tunnel",
+      "tip": "启动用于隧道组后端的隧道"
+    },
+    {
+      "name": "update",
+      "tip": "将 ngrok 更新到最新版本"
+    },
+    {
+      "name": "version",
+      "tip": "打印版本信息"
+    }
+  ],
   "options": [
     {
       "name": "--version",
@@ -11,11 +68,27 @@
   ],
   "common_options": [
     {
+      "name": "--config",
+      "tip": [
+        "指定配置文件的路径\n",
+        "如果有多个会被合并"
+      ]
+    },
+    {
       "name": "--help",
       "alias": [
         "-h"
       ],
       "tip": "显示帮助信息"
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "https://ngrok.com/",
+      "description": [
+        "ngrok - 面向开发人员的统一入口平台。\n",
+        "将 localhost 连接到 Internet 以测试应用程序和 API。"
+      ]
+    }
+  }
 }
