feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -20,7 +20,7 @@
         },
         {
           "name": "rm",
-          "symbol":"SpaceTab" ,
+          "symbol": "SpaceTab",
           "tip": [
             "U: rm <bucket>\n",
             "Remove Scoop bucket\n",
@@ -777,5 +777,21 @@
         ]
       }
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "Set whether to disable hooks. Default to 0.\n",
+        "The scoop hooks are used to get the name of the installed apps, bucket name, cache, etc. and then dynamically add them to some completions. (e.g. <@Magenta>uninstall<@Blue>, <@Magenta>update<@Blue>, <@Magenta>bucket<@Blue>, <@Magenta>cache rm<@Blue>, <@Magenta>hold<@Blue>, etc.)\n",
+        "For example, enter <@Magenta>scoop uninstall<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions about the name of the installed apps.\n",
+        "You can disable hooks by running <@Magenta>psc completion scoop disable_hooks 1<@Blue>."
+      ]
+    }
+  ]
 }
