--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -777,5 +777,21 @@
         ]
       }
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "设置是否禁用 hooks，默认为 0 表示不禁用\n",
+        "scoop 中的 hooks 主要用于获取已安装的 app 名称、bucket 名称、cache 等, 然后动态添加到一些命令补全中(如 <@Magenta>uninstall<@Blue>, <@Magenta>update<@Blue>, <@Magenta>bucket<@Blue>, <@Magenta>cache rm<@Blue>, <@Magenta>hold<@Blue> 等)\n",
+        "如: 输入 <@Magenta>scoop uninstall<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取已安装的应用名补全\n",
+        "你可以通过运行 <@Magenta>psc completion scoop disable_hooks 1<@Blue> 来禁用 hooks"
+      ]
+    }
+  ]
 }
