feat(completions): update wsl

--- a/completions/wsl/language/en-US.json
+++ b/completions/wsl/language/en-US.json
@@ -440,5 +440,21 @@
       "--unregister": "Unregister distribution -- {{$Distro}}",
       "--export": "Export distribution -- {{ $Distro }}"
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "Set whether to disable hooks. Default to 0.\n",
+        "The wsl hooks are used to get the distro name, and then dynamically add it to some completions. (e.g. <@Magenta>-d/--distribution<@Blue>, <@Magenta>-t/--terminate<@Blue>, etc.)\n",
+        "For example, after entering <@Magenta>wsl -d<@Blue>, pressing <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions.\n",
+        "You can disable hooks by running <@Magenta>psc completion scoop disable_hooks 1<@Blue>."
+      ]
+    }
+  ]
 }
