--- a/completions/wsl/language/zh-CN.json
+++ b/completions/wsl/language/zh-CN.json
@@ -432,5 +432,21 @@
       "--unregister": "注销分发 -- {{$Distro}}",
       "--export": "导出分发 -- {{ $Distro }}"
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "设置是否禁用 hooks，默认为 0 表示不禁用\n",
+        "wsl 中的 hooks 主要用于获取已添加的分发名称等, 然后动态添加到一些命令补全中(如 <@Magenta>-d/--distribution<@Blue>, <@Magenta>-t/--terminate<@Blue> 等)\n",
+        "如: 输入 <@Magenta>wsl -d<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取到额外的动态添加的补全\n",
+        "你可以通过运行 <@Magenta>psc completion scoop disable_hooks 1<@Blue> 来禁用 hooks"
+      ]
+    }
+  ]
 }
