feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1962,5 +1962,21 @@
         ]
       }
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "Set whether to disable hooks. Default to 0.\n",
+        "The psc hooks are used to get the name of the installed completions, completions that can be added, etc. and then dynamically add them to some completions. (e.g. <@Magenta>add<@Blue>, <@Magenta>rm<@Blue>, <@Magenta>update<@Blue>, <@Magenta>completion<@Blue>, <@Magenta>alias<@Blue>, etc.)\n",
+        "For example, enter <@Magenta>psc rm<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions about the name of the installed completions.\n",
+        "You can disable hooks by running <@Magenta>psc completion psc disable_hooks 1<@Blue>."
+      ]
+    }
+  ]
 }
