--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1964,5 +1964,21 @@
         ]
       }
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "设置是否禁用 hooks，默认为 0 表示不禁用\n",
+        "psc 中的 hooks 主要用于获取已添加的补全名称、可添加的补全名称等, 然后动态添加到一些命令补全中(如 <@Magenta>add<@Blue>, <@Magenta>rm<@Blue>, <@Magenta>update<@Blue>, <@Magenta>completion<@Blue>, <@Magenta>alias<@Blue> 等)\n",
+        "如: 输入 <@Magenta>psc rm<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取已添加的补全名称的补全\n",
+        "你可以通过运行 <@Magenta>psc completion psc disable_hooks 1<@Blue> 来禁用 hooks"
+      ]
+    }
+  ]
 }
