feat(completions): update wt

--- a/completions/wt/language/en-US.json
+++ b/completions/wt/language/en-US.json
@@ -169,7 +169,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/microsoft/terminal",
-      "description": "Windows terminal command line"
+      "description": [
+        "Windows Terminal command line.\n",
+        "You can use it to start a terminal."
+      ]
     }
   }
 }
