--- a/completions/wt/language/zh-CN.json
+++ b/completions/wt/language/zh-CN.json
@@ -169,7 +169,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/microsoft/terminal",
-      "description": "Windows terminal 命令行终端"
+      "description": [
+        "Windows Terminal 命令行终端。\n",
+        "你可以使用此命令启动一个终端。"
+      ]
     }
   }
 }
