feat(completions): update some completions
- b2sum(en-US)
- b3sum(en-US)
- base32(en-US)
- base64(en-US)
- basename(en-US)
- basenc(en-US)
- cksum(en-US)
- comm(en-US)
- csplit(en-US)

--- a/completions/b3sum/language/en-US.json
+++ b/completions/b3sum/language/en-US.json
@@ -1,15 +1,6 @@
 {
   "options": [
     {
-      "name": "--version",
-      "alias": [
-        "-V"
-      ],
-      "tip": "Show the version."
-    }
-  ],
-  "common_options": [
-    {
       "name": "-b",
       "alias": [
         "--binary"
@@ -53,6 +44,10 @@
       "tip": "exit non-zero for improperly formatted checksum lines"
     },
     {
+      "name": "--ignore-missing",
+      "tip": "don't fail or report status for missing files"
+    },
+    {
       "name": "-w",
       "alias": [
         "--warn"
@@ -67,9 +62,26 @@
       "tip": "end each output line with NUL, not newline"
     },
     {
-      "name": "--no-names",
-      "tip": "Omits filenames in the output (option not present in GNU/Coreutils)"
+      "name": "-l",
+      "alias": [
+        "--length"
+      ],
+      "symbol": "WriteSpaceTab",
+      "tip": [
+        "U: -l|--length <BITS>\n",
+        "digest length in bits;\n",
+        "must not exceed the max for the blake2 algorithm (512) and must be a multiple of 8"
+      ]
     },
+    {
+      "name": "--version",
+      "alias": [
+        "-V"
+      ],
+      "tip": "Show the version."
+    }
+  ],
+  "common_options": [
     {
       "name": "--help",
       "alias": [
@@ -81,7 +93,7 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "b3sum - Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
     }
   }
 }
