--- a/completions/base32/language/en-US.json
+++ b/completions/base32/language/en-US.json
@@ -1,22 +1,6 @@
 {
   "options": [
     {
-      "name": "--version",
-      "alias": [
-        "-V"
-      ],
-      "tip": "Show the version."
-    }
-  ],
-  "common_options": [
-    {
-      "name": "-w",
-      "alias": [
-        "-wrap"
-      ],
-      "tip": "wrap encoded lines after COLS character (default 76, 0 to disable wrapping)"
-    },
-    {
       "name": "-d",
       "alias": [
         "-decode"
@@ -31,6 +15,26 @@
       "tip": "when decoding, ignore non-alphabetic characters"
     },
     {
+      "name": "-w",
+      "alias": [
+        "-wrap"
+      ],
+      "symbol": "WriteSpaceTab",
+      "tip": [
+        "U: -w|-wrap <COLS>\n",
+        "wrap encoded lines after COLS character (default 76, 0 to disable wrapping)"
+      ]
+    },
+    {
+      "name": "--version",
+      "alias": [
+        "-V"
+      ],
+      "tip": "Show the version."
+    }
+  ],
+  "common_options": [
+    {
       "name": "--help",
       "alias": [
         "-h"
@@ -41,7 +45,7 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "base32 - Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
     }
   }
 }
