--- a/completions/basename/language/en-US.json
+++ b/completions/basename/language/en-US.json
@@ -1,28 +1,22 @@
 {
   "options": [
     {
-      "name": "--version",
+      "name": "-a",
       "alias": [
-        "-V"
+        "--multiple"
       ],
-      "tip": "Show the version."
-    }
-  ],
-  "common_options": [
+      "tip": "support multiple arguments and treat each as a NAME"
+    },
     {
       "name": "-s",
       "alias": [
         "--suffix"
       ],
-      "tip": "remove a trailing SUFFIX; implies -a"
-    },
-    {
-      "name": "-a",
-      "tip": "support multiple arguments and treat each as a NAME"
-    },
-    {
-      "name": "--multiple",
-      "tip": "support multiple arguments and treat each as a NAME"
+      "symbol": "WriteSpaceTab",
+      "tip": [
+        "U: -s|--suffix <SUFFIX>\n",
+        "remove a trailing SUFFIX; implies -a"
+      ]
     },
     {
       "name": "-z",
@@ -31,6 +25,15 @@
       ],
       "tip": "end each output line with NUL, not newline"
     },
+    {
+      "name": "--version",
+      "alias": [
+        "-V"
+      ],
+      "tip": "Show the version."
+    }
+  ],
+  "common_options": [
     {
       "name": "--help",
       "alias": [
