--- a/completions/comm/language/en-US.json
+++ b/completions/comm/language/en-US.json
@@ -1,19 +1,6 @@
 {
   "options": [
     {
-      "name": "--version",
-      "alias": [
-        "-V"
-      ],
-      "tip": "Show the version."
-    }
-  ],
-  "common_options": [
-    {
-      "name": "--output-delimiter",
-      "tip": "separate columns with STR"
-    },
-    {
       "name": "-1",
       "tip": "suppress column 1 (lines unique to FILE1)"
     },
@@ -26,6 +13,14 @@
       "tip": "suppress column 3 (lines that appear in both files)"
     },
     {
+      "name": "--output-delimiter",
+      "symbol":"WriteSpaceTab",
+      "tip": [
+        "U: --output-delimiter <STR>\n",
+        "separate columns with STR"
+      ]
+    },
+    {
       "name": "-z",
       "alias": [
         "--zero-terminated"
@@ -36,6 +31,15 @@
       "name": "--total",
       "tip": "output a summary"
     },
+    {
+      "name": "--version",
+      "alias": [
+        "-V"
+      ],
+      "tip": "Show the version."
+    }
+  ],
+  "common_options": [
     {
       "name": "--help",
       "alias": [
