--- a/completions/csplit/language/en-US.json
+++ b/completions/csplit/language/en-US.json
@@ -1,34 +1,26 @@
 {
   "options": [
     {
-      "name": "--version",
-      "alias": [
-        "-V"
-      ],
-      "tip": "Show the version."
-    }
-  ],
-  "common_options": [
-    {
       "name": "-b",
       "alias": [
         "--suffix-format"
       ],
-      "tip": "use sprintf FORMAT instead of %02d"
+      "symbol": "WriteSpaceTab",
+      "tip": [
+        "U: -b|--suffix-format <FORMAT>\n",
+        "use sprintf FORMAT instead of %02d"
+      ]
     },
     {
       "name": "-f",
       "alias": [
         "--prefix"
       ],
-      "tip": "use PREFIX instead of 'xx'"
-    },
-    {
-      "name": "-n",
-      "alias": [
-        "--digits"
-      ],
-      "tip": "use specified number of digits instead of 2"
+      "symbol": "WriteSpaceTab",
+      "tip": [
+        "U: -f|--prefix <PREFIX>\n",
+        "use PREFIX instead of 'xx'"
+      ]
     },
     {
       "name": "-k",
@@ -40,6 +32,17 @@
     {
       "name": "--suppress-matched",
       "tip": "suppress the lines matching PATTERN"
+    },
+    {
+      "name": "-n",
+      "alias": [
+        "--digits"
+      ],
+      "symbol": "WriteSpaceTab",
+      "tip": [
+        "U: -n|--digits <DIGITS>\n",
+        "use specified number of digits instead of 2"
+      ]
     },
     {
       "name": "-s",
@@ -56,6 +59,15 @@
       ],
       "tip": "remove empty output files"
     },
+    {
+      "name": "--version",
+      "alias": [
+        "-V"
+      ],
+      "tip": "Show the version."
+    }
+  ],
+  "common_options": [
     {
       "name": "--help",
       "alias": [
