--- a/completions/basenc/language/en-US.json
+++ b/completions/basenc/language/en-US.json
@@ -1,22 +1,6 @@
 {
   "options": [
     {
-      "name": "--version",
-      "alias": [
-        "-V"
-      ],
-      "tip": "Show the version."
-    }
-  ],
-  "common_options": [
-    {
-      "name": "-w",
-      "alias": [
-        "--wrap"
-      ],
-      "tip": "wrap encoded lines after COLS character (default 76, 0 to disable wrapping)"
-    },
-    {
       "name": "-d",
       "alias": [
         "-decode"
@@ -29,6 +13,16 @@
         "-ignore-garbage"
       ],
       "tip": "when decoding, ignore non-alphabetic characters"
+    },
+    {
+      "name": "-w",
+      "alias": [
+        "--wrap"
+      ],
+      "tip": [
+        "U: -w|--wrap <COLS>\n",
+        "wrap encoded lines after COLS character (default 76, 0 to disable wrapping)"
+      ]
     },
     {
       "name": "--base64",
@@ -66,6 +60,15 @@
         "when decoding, input length must be a multiple of 5"
       ]
     },
+    {
+      "name": "--version",
+      "alias": [
+        "-V"
+      ],
+      "tip": "Show the version."
+    }
+  ],
+  "common_options": [
     {
       "name": "--help",
       "alias": [
