feat(completions): update some completions
- b2sum(en-US)
- b3sum(en-US)
- base32(en-US)
- base64(en-US)
- basename(en-US)
- basenc(en-US)
- cksum(en-US)
- comm(en-US)
- csplit(en-US)

--- a/completions/b2sum/language/en-US.json
+++ b/completions/b2sum/language/en-US.json
@@ -93,7 +93,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": [
+        "Compute and check message digests.\n",
+        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      ]
     }
   }
 }
