--- a/completions/base32/language/en-US.json
+++ b/completions/base32/language/en-US.json
@@ -45,7 +45,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": [
+        "Encode/decode data and print to standard output.\n",
+        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      ]
     }
   }
 }
