--- a/completions/comm/language/en-US.json
+++ b/completions/comm/language/en-US.json
@@ -51,7 +51,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": [
+        "Compare two sorted files line by line.\n",
+        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      ]
     }
   }
 }
