--- a/completions/csplit/language/en-US.json
+++ b/completions/csplit/language/en-US.json
@@ -79,7 +79,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": [
+        "Split a file into sections determined by context lines.\n",
+        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      ]
     }
   }
 }
