--- a/completions/b3sum/language/en-US.json
+++ b/completions/b3sum/language/en-US.json
@@ -93,7 +93,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": [
+        "Compute and check message digests.\n",
+        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      ]
     }
   }
 }
