--- a/completions/basename/language/en-US.json
+++ b/completions/basename/language/en-US.json
@@ -45,7 +45,10 @@
   "info": {
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
-      "description": "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      "description": [
+        "Print NAME with any leading directory components removed.\n",
+        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+      ]
     }
   }
 }
