feat(completions): update head

--- a/completions/head/language/en-US.json
+++ b/completions/head/language/en-US.json
@@ -67,7 +67,7 @@
     "completion_info": {
       "url": "https://github.com/uutils/coreutils",
       "description": [
-        "Print the first 10 lines of each `FILE` to standard output.\n",
+        "Print the first 10 lines of each 'FILE' to standard output.\n",
         "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
