feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1447,7 +1447,8 @@
         "<@Red>PSCompletions module update failed.\n",
         "<@Yellow>Possible reasons for failure:\n",
         "1. Network issue.\n",
-        "2. Permissions issue, In version 4.0.0+, you must install with user permissions.(<@Magenta>-Scope CurrentUser<@Yellow>)\n",
+        "2. If you used the scoop package manager to install PSCompletions, you should also use scoop to update it.(<@Magenta>scoop update PSCompletions<@Yellow>)\n",
+        "3. Permissions issue, In version 4.0.0+, you must install with user permissions.(<@Magenta>-Scope CurrentUser<@Yellow>)\n",
         "   - Permission issue for upgrading modules from v3.x.x to v4.x.x in Windows PowerShell(powershell)\n",
         "       - If you are using Windows PowerShell(powershell) and are updating modules, you should first remove all PSCompletions modules from your computer.\n",
         "       - Then use <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Yellow> to install the latest version of PSCompletions module.\n",
@@ -1457,7 +1458,7 @@
         "       - Then use <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Yellow> to install the latest version of PSCompletions module.\n",
         "       - <@Magenta>-Scope CurrentUser<@Yellow> is required, <@Red> cannot use '-Scope AllUser'<@Yellow>\n",
         "       - You are free to handle width the previously backed up module directory.\n",
-        "3. For other reasons, please submit an issue. ( https://github.com/abgox/PSCompletions/issues )\n"
+        "4. For other reasons, please submit an issue. ( https://github.com/abgox/PSCompletions/issues )\n"
       ]
     },
     "update_info": [
