--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1449,7 +1449,8 @@
         "<@Red>PSCompletions 模块更新失败, 请检查原因\n",
         "<@Yellow>可能的失败原因:\n",
         "1. 网络问题\n",
-        "2. 权限问题, 在 4.0.0+ 版本中, 你必须以用户权限(<@Magenta>-Scope CurrentUser<@Yellow>)安装\n",
+        "2. 如果你使用了 scoop 包管理器安装 PSCompletions, 你也应该使用 scoop 更新它(<@Magenta>scoop update PSCompletions<@Yellow>)\n",
+        "3. 权限问题, 在 4.0.0+ 版本中, 你必须以用户权限(<@Magenta>-Scope CurrentUser<@Yellow>)安装\n",
         "   - 在 Windows PowerShell(powershell) 中将模块从 v3.x.x 升级到 v4.x.x 的权限问题\n",
         "       - 如果你正在使用 Windows PowerShell(powershell), 且正在升级模块, 此时, 你应该先删除电脑中所有的 PSCompletions 模块\n",
         "       - 然后使用 <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Yellow> 来安装最新版本的 PSCompletions 模块\n",
@@ -1459,7 +1460,7 @@
         "       - 然后使用 <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Yellow> 来安装最新版本的 PSCompletions 模块\n",
         "       - <@Magenta>-Scope CurrentUser<@Yellow> 必须指定, <@Red>不能使用 -Scope AllUser<@Yellow>\n",
         "       - 你可以看情况处理之前备份的模块目录\n",
-        "3. 其他原因, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )\n"
+        "4. 其他原因, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )\n"
       ]
     },
     "update_info": [
