feat(completions): update pnpm

--- a/completions/pnpm/language/en-US.json
+++ b/completions/pnpm/language/en-US.json
@@ -75,6 +75,9 @@
         },
         {
           "name": "--workspace",
+          "alias": [
+            "-w"
+          ],
           "tip": "Only adds the new dependency if it is found in the workspace"
         }
       ]
