--- a/completions/pnpm/language/zh-CN.json
+++ b/completions/pnpm/language/zh-CN.json
@@ -75,6 +75,9 @@
         },
         {
           "name": "--workspace",
+          "alias": [
+            "-w"
+          ],
           "tip": "只有在 workspace 中找到新依赖时才添加它"
         }
       ]
