--- a/completions/pdm/language/en-US.json
+++ b/completions/pdm/language/en-US.json
@@ -130,8 +130,12 @@
 		},
 		{
 			"name": "-v",
-			"alias": ["--verbose", "-vv"],
-			"tip": "Use `-v` for detailed output and `-vv` for more detailed"
+			"alias": ["--verbose"],
+			"tip": "detailed output"
+		},
+		{
+			"name": "-vv",
+			"tip": "more detailed output"
 		},
 		{
 			"name": "-q",
