fix(completions): update psc

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -22,7 +22,7 @@
           "tip": [
             "添加所有的补全\n",
             "注意：添加大量的补全可能会导致 PowerShell 启动加载速度变得慢一点\n",
-            "     建议添加自己需要的补全"
+            "      建议添加自己需要使用的补全"
           ]
         }
       ],
